mdds 0.9.0

* multi_type_vector

  * added another block function template to make it easier to declare
    container with 3 custom element types.

  * added two variants of release():

    * template<typename _T> iterator
      release(size_type pos, _T& value)

    * template<typename _T> iterator
      release(const iterator& pos_hint, size_type pos, _T& value)

  * added a new variant of position() that takes const_iterator as
    position hint.

    * std::pair<const_iterator, size_type>
      position(const const_iterator& pos_hint, size_type pos) const

  * fixed a memory leak in

    * set(size_type pos, const _T& it_begin, const _T& it_end).

  * added compile-time macro MDDS_MULTI_TYPE_VECTOR_USE_DEQUE to allow
    users to specify std::deque as the underlying data array.  By
    default, multi_type_vector uses std::vector as the underlying data
    array container.

  * added a new variant of swap() that allows partial swapping of
    content with another container.

  * added static block type identifier so that the numeric block type
    ID can be deduced from the block type directly.

  * value_type (which is a type of object returned when dereferencing
    an iterator) now stores 'position' which is the logical position
    of the first element of a block.

mdds 0.8.1

* multi_type_vector

  * fixed a bug in the erase() method where adjacent blocks of the
    same type would fail to merge after the erase() call.

  * add a variant of the position() method that takes an iterator as
    positional hint.  Note that there is no variant of position() that
    takes const_iterator.

mdds 0.8.0

* all

  * added .pc file for pkg-config.

* flat_segment_tree

  * changed the return type of search_tree from bool to
    std::pair<const_iterator,bool>, to make it consistent with the
    search() method.  Note that this is an API-incompatible change.

* multi_type_vector

  * added char and unsigned char types to the standard types supported
    by default.
